--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,114 @@
 [versions]
-agp = "8.2.0-beta03"
-kotlin = "1.8.10"
-core-ktx = "1.12.0"
+agp = "8.0.2"
+
+coil = "2.4.0"
+
+kotlin = "1.9.0"
+kotlin-coroutines = "1.7.3"
+
+core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
 activity-compose = "1.7.2"
-compose-bom = "2023.03.00"
+compose-bom = "2023.09.00"
+compose-lifecycle = "2.7.0-alpha02"
+hilt = "2.48"
+ksp = "1.9.0-1.0.13"
+androidxComposeCompiler = "1.5.0"
+retrofit = "2.9.0"
+room = "2.5.2"
+okhttp = "4.11.0"
+moshi = "1.15.0"
+
+androidx-test-espresso-espresso-core = "3.5.1"
+timber = "5.0.1"
+appcompat = "1.6.1"
+material = "1.9.0"
 
 [libraries]
+accompanist-ui-controller = { module = "com.google.accompanist:accompanist-systemuicontroller", version = "0.31.5-beta" }
+
+android-gradle = { module = "com.android.tools.build:gradle", version = "8.0.2" }
+kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
-ui = { group = "androidx.compose.ui", name = "ui" }
-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+
+compose-coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
+compose-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
+compose-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "compose-lifecycle" }
+compose-material = { group = "androidx.compose.material3", name = "material3" }
+compose-material-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version = "2.7.2" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+
+kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
+
+
+moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+moshi-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
+moshi-retrofit = { module = "com.squareup.retrofit2:converter-moshi", version = "2.9.0" }
+
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+
+
+slack-eithernet = { module = "com.slack.eithernet:eithernet", version = "1.2.1" }
+
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-ksp = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+
+kotlin-testing-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.7.3" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test-junit", version = "1.9.0" }
+
+splash-screen = { module = "androidx.core:core-splashscreen", version = "1.0.1" }
+
+testing-junit = { module = "junit:junit", version.ref = "junit" }
+testing-mockk = { module = "io.mockk:mockk", version = "1.12.4" }
+testing-turbine = { module = "app.cash.turbine:turbine", version = "0.12.1" }
+testing-testng = { module = "org.testng:testng", version = "6.9.6" }
+testing-instantiator = { module = "com.hannesdorfmann.instantiator:instantiator", version = "1.0.0" }
+androidx-test-runner = { module = "androidx.test:runner", version = "1.5.2" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version = "1.1.5" }
+robolectric = { module = "org.robolectric:robolectric", version = "4.10.3" }
+
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+testing-mock-webserver = { module = "com.squareup.okhttp3:mockwebserver", version = "4.10.0" }
+
+androidx-annotation-jvm = { group = "androidx.annotation", name = "annotation-jvm", version = "1.7.0" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+[bundles]
+compose = ["compose-foundation", "compose-foundation-layout", "compose-iconsExtended", "compose-material-windowSizeClass", "compose-material", "compose-runtime", "compose-ui-util", "compose-coil", "activity-compose", "compose-navigation"]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version = "11.3.1" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
